# contabilidad

./: Dudas.md  README.md  balance_limpio.csv  contabilidad.ipynb  contabilidad.py  cuentas.csv  ejemplo.ipynb  imports.py  libro_diario_2022.csv  pyproject.toml  requirements.txt  secciones_balance.json
.ipynb_checkpoints/: contabilidad-checkpoint.ipynb  gestoría-checkpoint.md
Archivo/: secciones_balance.json
Archivo/Excels/: cuentas.xlsx
Archivo/V0/: contabilidad.py  documentation.ipynb  ejemplo.ipynb
Archivo/V1/: constantes.py  contabilidad.py  ejemplo.ipynb  funciones.py
Archivo/archivos/: cuenta_de_pérdidas_y_ganancias.csv
Archivo/archivos/Excels/: cuenta_de_pérdidas_y_ganancias.xlsx
Excels/: Balance.xlsx
