[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "contabilidad"
version = "0.0.1"
authors = [
  { name="Endika Llano Matxin", email="endikallano@gmail.com" },
]
description = "An accounting package for Spanish 'Plan General Contable'"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]